created a script to hide and show the password

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="field input">
                 <label for="">Пароль</label>
-                <input type="text" placeholder="Введіть новий пароль">
+                <input type="password" placeholder="Введіть новий пароль">
                 <i class="fas fa-eye"></i>
             </div>
             <div class="field image">
@@ -47,6 +47,8 @@
         <div class="link">Вже зареєстровані? <a href="#">Увійдіть зараз</a></div>
     </section>
 </div>
+
+<script src="js/pass-show-hide.js"></script>
 
 </body>
 </html>
