--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             </div>
             <div class="field input">
                 <label for="">Пароль</label>
-                <input type="text" placeholder="Введіть новий пароль">
+                <input type="password" placeholder="Введіть новий пароль">
                 <i class="fas fa-eye"></i>
             </div>
 
@@ -34,6 +34,8 @@
         <div class="link">Не зареєстровані? <a href="#">Зареєструйся зараз</a></div>
     </section>
 </div>
+
+<script src="js/pass-show-hide.js"></script>
 
 </body>
 </html>
